traefik/test/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: shastra.dongguk.edu
    http:
      paths:
      - path: /test
        backend:
          serviceName: traefik-web-ui
          servicePort: 80
